--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -1,3 +1,7 @@
+@import '../../node_modules/bulma/css/bulma.css';
+@import './mainStyles.less';
+@import './bulmaOverride.less';
+
 html, body {
     width: 100%;
     height: 100%;
@@ -6,18 +10,26 @@ html, body {
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
+
 }
 
 a {
     text-decoration: none;
 }
 
+.nav {
+    background-color: @darkPurple;
+    margin-bottom: 50px;
+
+    h1 {
+        color: @white;
+    }
+}
+
 .container {
-    text-align: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .subtitle {
