--- a/src/stylesheets/bulmaOverride.less
+++ b/src/stylesheets/bulmaOverride.less
@@ -15,6 +15,19 @@
         }
     }
 
+    .score {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+
+        h2 {
+            font-size: 36px;
+            color: @darkPurple;
+            margin: 0;
+            padding: 0;
+        }
+    }
+
     .like {
         border-radius: 2px;
         color: @darkPurple;
