--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -6,7 +6,12 @@
 @darkGray: #393D3F;
 @white: #F0F1ED;
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:700,800');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700|Montserrat:500,700,800');
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
 
 h1 {
     color: @darkGray;
@@ -20,4 +25,38 @@ h2 {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 24px;
+}
+
+h3 {
+    color: @darkGray;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 16px;
+}
+
+h4 {
+    color: @darkGray;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 16px;
+}
+
+h5 {
+    color: @darkPurple;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 24px;
+}
+
+p {
+    color: @mediumGray;
+    font-family: 'Lato';
+    weight: 400;
+    font-size: 18px;
+}
+
+a {
+    font-family: 'Lato';
+    weight: 400;
+    font-size: 18px;
 }
