--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -85,6 +85,11 @@ a {
                         color: @darkPurple;
                     }
 
+                    .liked {
+                        background-color: @darkPurple;
+                        color: white;
+                    }
+
                     .like:hover {
                         color: white;
                         cursor: pointer;
@@ -93,6 +98,11 @@ a {
 
                     .dislike {
                         color: @mediumPurple;
+                    }
+
+                    .disliked {
+                        background-color: @mediumPurple;
+                        color: white;
                     }
 
                     .dislike:hover {
