--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -26,7 +26,21 @@ a {
     }
 
     .left {
+        display: flex;
         flex: 1;
+        flex-direction: column;
+
+        .connection {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 10px;
+
+            h3 {
+                flex: 1;
+                margin-left: 10px;
+            }
+        }
     }
 
     .middle {
@@ -34,7 +48,23 @@ a {
         flex: 2;
         flex-direction: column;
 
+        .userInput {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 20px;
+
+            input {
+                box-sizing: border-box;
+                font-size: 24px;
+                width: 100%;
+                margin-left: 0;
+                margin-bottom: 10px;
+                padding: 20px;
+            }
+        }
+
         .post {
+            background-color: white;
             border: 1px solid @lightGray;
             border-radius: 3px;
             display: flex;
@@ -51,10 +81,6 @@ a {
                     flex-direction: row;
                     align-content: center;
                     justify-content: center;
-
-                    img {
-                        height: 40px;
-                    }
 
                     .name {
                         flex: 1;
@@ -125,17 +151,8 @@ a {
                     flex-direction: row;
                     padding: 15px;
 
-                    .image {
-                        padding: 10px 0;
-
-                        img {
-                            height: 40px;
-                        }
-                    }
-
                     .content {
                         margin-left: 15px;
-                        padding: 10px 0;
                         flex: 1;
 
                         h4 {
@@ -150,19 +167,6 @@ a {
                 display: flex;
                 flex-direction: row;
                 padding: 15px;
-
-                img {
-                    height: 40px;
-                }
-
-                input {
-                    border: 1px solid @lightGray;
-                    border-radius: 3px;
-                    font-family: 'Lato';
-                    flex: 1;
-                    margin-left: 15px;
-                    padding: 5px;
-                }
             }
 
             .submitComment {
@@ -183,5 +187,10 @@ a {
 
     .right {
         flex: 1;
+        flex-direction: column;
+
+        h3 {
+            margin-bottom: 10px;
+        }
     }
 }
