--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -18,7 +18,7 @@ h1 {
 h2 {
   color: #393D3F;
   font-family: 'Montserrat';
-  font-weight: 700;
+  font-weight: 500;
   font-size: 24px;
 }
 h3 {
@@ -39,6 +39,13 @@ h5 {
   font-weight: 500;
   font-size: 24px;
 }
+h6 {
+  color: #7CC7A9;
+  font-family: 'Montserrat';
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 p {
   color: #5E6572;
   font-family: 'Lato';
@@ -50,6 +57,9 @@ a {
   weight: 400;
   font-size: 18px;
 }
+.mediumGray {
+  color: #5E6572;
+}
 input {
   border: 1px solid #AAACA9;
   border-radius: 3px;
@@ -57,6 +67,9 @@ input {
   flex: 1;
   margin-left: 15px;
   padding: 5px;
+}
+input:focus {
+  outline: none;
 }
 .thumbnail {
   background-color: #393D3F;
@@ -98,17 +111,28 @@ input {
 html,
 body {
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: none;
 }
 a {
   text-decoration: none;
 }
+.headlinr-nav {
+  background-color: #6A66A3;
+  box-sizing: border-box;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 .headlinr {
+  box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: row;
+  padding: 20px;
 }
 .headlinr .column {
   display: flex;
@@ -119,15 +143,39 @@ a {
   flex: 1;
   flex-direction: column;
 }
-.headlinr .left .connection {
+.headlinr .left h2 {
+  margin-bottom: 15px;
+}
+.headlinr .left .connections-panel {
+  background-color: #F0F1ED;
+  border-radius: 5px;
+  padding: 15px;
+}
+.headlinr .left .connections-panel .connection {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.headlinr .left .connections-panel .connection .info {
   display: flex;
   flex-direction: row;
+  width: 100%;
   align-items: center;
   margin-bottom: 10px;
 }
-.headlinr .left .connection h3 {
+.headlinr .left .connections-panel .connection .info p {
   flex: 1;
   margin-left: 10px;
+}
+.headlinr .left .connections-panel .connection .feelings-container {
+  box-sizing: border-box;
+  border: 1px solid #AAACA9;
+  width: 100%;
+  height: 5px;
+}
+.headlinr .left .connections-panel .connection .feelings-container .feelings {
+  background-color: #7CC7A9;
+  height: 100%;
 }
 .headlinr .middle {
   display: flex;
@@ -146,6 +194,21 @@ a {
   margin-left: 0;
   margin-bottom: 10px;
   padding: 20px;
+}
+.headlinr .middle .userInput .submitHeadline {
+  box-sizing: border-box;
+  border: 1px solid #AAACA9;
+  border-radius: 3px;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
+}
+.headlinr .middle .userInput .submitHeadline:hover {
+  cursor: pointer;
+  background-color: #4F2D87;
+}
+.headlinr .middle .userInput .submitHeadline:hover h5 {
+  color: white;
 }
 .headlinr .middle .post {
   background-color: white;
@@ -248,6 +311,11 @@ a {
   flex: 1;
   flex-direction: column;
 }
-.headlinr .right h3 {
+.headlinr .right .trends-panel {
+  border-radius: 3px;
+  border: 1px solid #AAACA9;
+  padding: 15px;
+}
+.headlinr .right h2 {
   margin-bottom: 10px;
 }
