--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -2,9 +2,9 @@
 
 html, body {
     width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
+    overflow-y: none;
 }
 
 body {
@@ -15,10 +15,22 @@ a {
     text-decoration: none;
 }
 
+.headlinr-nav {
+    background-color: @mediumPurple;
+    box-sizing: border-box;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 .headlinr {
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     flex-direction: row;
+    padding: 20px;
 
     .column {
         display: flex;
@@ -30,15 +42,44 @@ a {
         flex: 1;
         flex-direction: column;
 
-        .connection {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin-bottom: 10px;
+        h2 {
+            margin-bottom: 15px;
+        }
 
-            h3 {
-                flex: 1;
-                margin-left: 10px;
+        .connections-panel {
+            background-color: @white;
+            border-radius: 5px;
+            padding: 15px;
+
+            .connection {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 10px;
+
+                .info {
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+                    align-items: center;
+                    margin-bottom: 10px;
+
+                    p {
+                        flex: 1;
+                        margin-left: 10px;
+                    }
+                }
+
+                .feelings-container {
+                    box-sizing: border-box;
+                    border: 1px solid @lightGray;
+                    width: 100%;
+                    height: 5px;
+
+                    .feelings {
+                        background-color: @green;
+                        height: 100%;
+                    }
+                }
             }
         }
     }
@@ -60,6 +101,24 @@ a {
                 margin-left: 0;
                 margin-bottom: 10px;
                 padding: 20px;
+            }
+
+            .submitHeadline {
+                box-sizing: border-box;
+                border: 1px solid @lightGray;
+                border-radius: 3px;
+                padding: 10px;
+                text-align: center;
+                width: 100%;
+            }
+
+            .submitHeadline:hover {
+                cursor: pointer;
+                background-color: @darkPurple;
+
+                h5 {
+                    color: white;
+                }
             }
         }
 
@@ -189,8 +248,14 @@ a {
         flex: 1;
         flex-direction: column;
 
-        h3 {
-            margin-bottom: 10px;
+        .trends-panel {
+            border-radius: 3px;
+            border: 1px solid @lightGray;
+            padding: 15px;
         }
+
+        h2 {
+                margin-bottom: 10px;
+            }
     }
 }
