--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -1,6 +1,7 @@
 @lightPurple: #9D96B8;
 @mediumPurple: #6A66A3;
 @darkPurple: #4F2D87;
+@green: #7CC7A9;
 @lightGray: #AAACA9;
 @mediumGray: #5E6572;
 @darkGray: #393D3F;
@@ -23,7 +24,7 @@ h1 {
 h2 {
     color: @darkGray;
     font-family: 'Montserrat';
-    font-weight: 700;
+    font-weight: 500;
     font-size: 24px;
 }
 
@@ -48,6 +49,14 @@ h5 {
     font-size: 24px;
 }
 
+h6 {
+    color: @green;
+    font-family: 'Montserrat';
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
 p {
     color: @mediumGray;
     font-family: 'Lato';
@@ -61,6 +70,10 @@ a {
     font-size: 18px;
 }
 
+.mediumGray {
+    color: @mediumGray;
+}
+
 input {
     border: 1px solid @lightGray;
     border-radius: 3px;
@@ -68,6 +81,10 @@ input {
     flex: 1;
     margin-left: 15px;
     padding: 5px;
+}
+
+input:focus {
+    outline: none;
 }
 
 .thumbnail {
