Users now have feelings about your posts. Progress bars in place, need to create level system."

--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -60,18 +60,22 @@ h6 {
 p {
     color: @mediumGray;
     font-family: 'Lato';
-    weight: 400;
+    font-weight: 400;
     font-size: 18px;
 }
 
 a {
     font-family: 'Lato';
-    weight: 400;
+    font-weight: 400;
     font-size: 18px;
 }
 
 .mediumGray {
     color: @mediumGray;
+}
+
+.darkGray {
+    color: @darkGray;
 }
 
 input {
