--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -49,16 +49,19 @@ h6 {
 p {
   color: #5E6572;
   font-family: 'Lato';
-  weight: 400;
+  font-weight: 400;
   font-size: 18px;
 }
 a {
   font-family: 'Lato';
-  weight: 400;
+  font-weight: 400;
   font-size: 18px;
 }
 .mediumGray {
   color: #5E6572;
+}
+.darkGray {
+  color: #393D3F;
 }
 input {
   border: 1px solid #AAACA9;
@@ -119,13 +122,56 @@ a {
   text-decoration: none;
 }
 .headlinr-nav {
-  background-color: #6A66A3;
+  background-color: #4F2D87;
   box-sizing: border-box;
   padding: 10px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 100;
+}
+.headlinr-nav h1 {
+  color: #F0F1ED;
+  font-size: 28px !important;
+}
+.headlinr-score-tracker {
+  background-color: white;
+  border-top: 1px solid #393D3F;
+  box-shadow: 0px -2px 4px #AAACA9;
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 100;
+}
+.headlinr-score-tracker > div {
+  position: relative;
+  flex: 1;
+  padding: 15px;
+  text-align: center;
+}
+.headlinr-score-tracker > div h6 {
+  position: relative;
+}
+.headlinr-score-tracker > div:nth-child(2) {
+  border-right: 1px solid #393D3F;
+  border-left: 1px solid #393D3F;
+}
+.headlinr-score-tracker > div .tracker {
+  position: absolute;
+  height: 5px;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+.headlinr-score-tracker > div .tracker .progress {
+  background-color: #7CC7A9;
+  height: 100%;
+  max-width: 100%;
 }
 .headlinr {
   box-sizing: border-box;
@@ -136,6 +182,7 @@ a {
 }
 .headlinr .column {
   display: flex;
+  margin-top: 50px;
   padding: 20px;
 }
 .headlinr .left {
@@ -176,6 +223,7 @@ a {
 .headlinr .left .connections-panel .connection .feelings-container .feelings {
   background-color: #7CC7A9;
   height: 100%;
+  transition: width .5s;
 }
 .headlinr .middle {
   display: flex;
@@ -213,6 +261,7 @@ a {
 .headlinr .middle .post {
   background-color: white;
   border: 1px solid #AAACA9;
+  border-bottom: 3px solid #AAACA9;
   border-radius: 3px;
   display: flex;
   flex-direction: column;
