--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -7,22 +7,68 @@ html, body {
     overflow-y: none;
 }
 
-body {
-
-}
-
 a {
     text-decoration: none;
 }
 
 .headlinr-nav {
-    background-color: @mediumPurple;
+    background-color: @darkPurple;
     box-sizing: border-box;
     padding: 10px;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
+
+    h1 {
+        color: @white;
+        font-size: 28px !important;
+    }
+}
+
+.headlinr-score-tracker {
+    background-color: white;
+    border-top: 1px solid @darkGray;
+    box-shadow: 0px -2px 4px @lightGray;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+
+    > div {
+        position: relative;
+        flex: 1;
+        padding: 15px;
+        text-align: center;
+
+        h6 {
+            position: relative;
+        }
+
+        &:nth-child(2) {
+            border-right: 1px solid @darkGray;
+            border-left: 1px solid @darkGray;
+        }
+
+        .tracker {
+            position: absolute;
+            height: 5px;
+            top: 0;
+            left: 0;
+            right: 0;
+
+            .progress {
+                background-color: @green;
+                height: 100%;
+                max-width: 100%;
+            }
+        }
+    }
 }
 
 .headlinr {
@@ -34,6 +80,7 @@ a {
 
     .column {
         display: flex;
+        margin-top: 50px;
         padding: 20px;
     }
 
@@ -78,6 +125,7 @@ a {
                     .feelings {
                         background-color: @green;
                         height: 100%;
+                        transition: width .5s;
                     }
                 }
             }
@@ -125,6 +173,7 @@ a {
         .post {
             background-color: white;
             border: 1px solid @lightGray;
+            border-bottom: 3px solid @lightGray;
             border-radius: 3px;
             display: flex;
             flex-direction: column;
