--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -111,6 +111,19 @@ input:focus {
 .comment-add-leave-active {
   position: absolute;
 }
+::-webkit-scrollbar {
+  background-color: white;
+  border-left: 1px solid #AAACA9;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-right: 1px solid #AAACA9;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #5E6572;
+  border: 1px solid #AAACA9;
+  border-radius: 3px;
+}
 html,
 body {
   width: 100%;
@@ -120,6 +133,11 @@ body {
 }
 a {
   text-decoration: none;
+}
+.game {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 .headlinr-nav {
   background-color: #4F2D87;
@@ -235,12 +253,20 @@ a {
   flex-direction: column;
   margin-bottom: 20px;
 }
-.headlinr .middle .userInput input {
+.headlinr .middle .userInput .headline-submission {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+.headlinr .middle .userInput .headline-submission img {
+  height: 70px;
+  width: auto;
+}
+.headlinr .middle .userInput .headline-submission input {
   box-sizing: border-box;
   font-size: 24px;
-  width: 100%;
-  margin-left: 0;
-  margin-bottom: 10px;
+  flex: 1;
+  margin-left: 10px;
   padding: 20px;
 }
 .headlinr .middle .userInput .submitHeadline {
