--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -11,6 +11,12 @@ a {
     text-decoration: none;
 }
 
+.game {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
 .headlinr-nav {
     background-color: @darkPurple;
     box-sizing: border-box;
@@ -142,13 +148,23 @@ a {
             flex-direction: column;
             margin-bottom: 20px;
 
-            input {
-                box-sizing: border-box;
-                font-size: 24px;
-                width: 100%;
-                margin-left: 0;
+            .headline-submission {
+                display: flex;
+                flex-direction: row;
                 margin-bottom: 10px;
-                padding: 20px;
+
+                img {
+                    height: 70px;
+                    width: auto;
+                }
+
+                input {
+                    box-sizing: border-box;
+                    font-size: 24px;
+                    flex: 1;
+                    margin-left: 10px;
+                    padding: 20px;
+                }
             }
 
             .submitHeadline {
