--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -134,3 +134,19 @@ input:focus {
 .comment-add-leave-active {
   position: absolute;
 }
+
+::-webkit-scrollbar {
+    background-color: white;
+    border-left: 1px solid @lightGray;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    border-right: 1px solid @lightGray;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: @mediumGray;
+    border: 1px solid @lightGray;
+    border-radius: 3px;
+}
