Added start screen

--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -78,10 +78,16 @@ a {
     color: @darkGray;
 }
 
+.darkPurple {
+    color: @darkPurple
+}
+
 input {
     border: 1px solid @lightGray;
     border-radius: 3px;
+    box-sizing: border-box;
     font-family: 'Lato';
+    font-size: 18px;
     flex: 1;
     margin-left: 15px;
     padding: 5px;
