--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -63,10 +63,15 @@ a {
 .darkGray {
   color: #393D3F;
 }
+.darkPurple {
+  color: #4F2D87;
+}
 input {
   border: 1px solid #AAACA9;
   border-radius: 3px;
+  box-sizing: border-box;
   font-family: 'Lato';
+  font-size: 18px;
   flex: 1;
   margin-left: 15px;
   padding: 5px;
@@ -127,6 +132,7 @@ input:focus {
 html,
 body {
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   overflow-y: none;
@@ -134,10 +140,50 @@ body {
 a {
   text-decoration: none;
 }
-.game {
+.game,
+.start,
+.stats {
   display: flex;
   width: 100%;
   height: 100%;
+}
+.start {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.start .start-screen {
+  box-sizing: border-box;
+  padding: 20px;
+  width: 35%;
+}
+.start .start-screen h1 {
+  margin-bottom: 10px;
+}
+.start .start-screen .welcome {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.start .start-screen p {
+  margin-bottom: 7px;
+}
+.start .start-screen input {
+  width: 100%;
+  margin-left: 0;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.start .start-screen .start-button {
+  background-color: #4F2D87;
+  box-sizing: border-box;
+  color: white;
+  display: inline-block;
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+}
+.start .start-screen .start-button:hover {
+  cursor: pointer;
 }
 .headlinr-nav {
   background-color: #4F2D87;
@@ -194,6 +240,7 @@ a {
 .headlinr {
   box-sizing: border-box;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   padding: 20px;
@@ -249,8 +296,6 @@ a {
   flex-direction: column;
 }
 .headlinr .middle .userInput {
-  display: flex;
-  flex-direction: column;
   margin-bottom: 20px;
 }
 .headlinr .middle .userInput .headline-submission {
