--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -2,6 +2,7 @@
 
 html, body {
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     overflow-y: none;
@@ -11,10 +12,56 @@ a {
     text-decoration: none;
 }
 
-.game {
+.game, .start, .stats {
     display: flex;
     width: 100%;
     height: 100%;
+}
+
+.start {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .start-screen {
+        box-sizing: border-box;
+        padding: 20px;
+        width: 35%;
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        .welcome {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        p {
+            margin-bottom: 7px;
+        }
+
+        input {
+            width: 100%;
+            margin-left: 0;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .start-button {
+            background-color: @darkPurple;
+            box-sizing: border-box;
+            color: white;
+            display: inline-block;
+            text-align: center;
+            padding: 10px;
+            width: 100%;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .headlinr-nav {
@@ -80,6 +127,7 @@ a {
 .headlinr {
     box-sizing: border-box;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     padding: 20px;
@@ -144,8 +192,6 @@ a {
         flex-direction: column;
 
         .userInput {
-            display: flex;
-            flex-direction: column;
             margin-bottom: 20px;
 
             .headline-submission {
