--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -26,6 +26,7 @@ h3 {
   font-family: 'Montserrat';
   font-weight: 700;
   font-size: 16px;
+  line-height: 20px;
 }
 h4 {
   color: #393D3F;
@@ -69,14 +70,18 @@ a {
 input {
   border: 1px solid #AAACA9;
   border-radius: 3px;
+  color: #5E6572;
   box-sizing: border-box;
   font-family: 'Lato';
   font-size: 18px;
   flex: 1;
   margin-left: 15px;
-  padding: 5px;
+  padding: 10px;
+  position: relative;
+  transition: all .2s;
 }
 input:focus {
+  border-bottom: 5px solid #6A66A3;
   outline: none;
 }
 .thumbnail {
@@ -148,13 +153,18 @@ a {
   height: 100%;
 }
 .start {
+  background-color: rgba(0, 0, 0, 0.2);
+  background-image: url('../img/millenials.jpg');
+  background-size: cover;
+  background-position: center center;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .start .start-screen {
+  background-color: rgba(255, 255, 255, 0.85);
   box-sizing: border-box;
-  padding: 20px;
+  padding: 25px;
   width: 35%;
 }
 .start .start-screen h1 {
@@ -179,11 +189,15 @@ a {
   color: white;
   display: inline-block;
   text-align: center;
+  margin-top: 10px;
   padding: 10px;
   width: 100%;
 }
 .start .start-screen .start-button:hover {
   cursor: pointer;
+}
+.game {
+  padding: 20px;
 }
 .headlinr-nav {
   background-color: #4F2D87;
@@ -243,7 +257,6 @@ a {
   height: 100%;
   display: flex;
   flex-direction: row;
-  padding: 20px;
 }
 .headlinr .column {
   display: flex;
