--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -19,13 +19,18 @@ a {
 }
 
 .start {
+    background-color: rgba(0,0,0,.2);
+    background-image: url('../img/millenials.jpg');
+    background-size: cover;
+    background-position: center center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
     .start-screen {
+        background-color: rgba(255,255,255,.85);
         box-sizing: border-box;
-        padding: 20px;
+        padding: 25px;
         width: 35%;
 
         h1 {
@@ -54,6 +59,7 @@ a {
             color: white;
             display: inline-block;
             text-align: center;
+            margin-top: 10px;
             padding: 10px;
             width: 100%;
 
@@ -62,6 +68,10 @@ a {
             }
         }
     }
+}
+
+.game {
+    padding: 20px;
 }
 
 .headlinr-nav {
@@ -130,7 +140,6 @@ a {
     height: 100%;
     display: flex;
     flex-direction: row;
-    padding: 20px;
 
     .column {
         display: flex;
