--- a/src/stylesheets/mainStyles.less
+++ b/src/stylesheets/mainStyles.less
@@ -33,6 +33,7 @@ h3 {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 16px;
+    line-height: 20px;
 }
 
 h4 {
@@ -85,15 +86,19 @@ a {
 input {
     border: 1px solid @lightGray;
     border-radius: 3px;
+    color: @mediumGray;
     box-sizing: border-box;
     font-family: 'Lato';
     font-size: 18px;
     flex: 1;
     margin-left: 15px;
-    padding: 5px;
+    padding: 10px;
+    position: relative;
+    transition: all .2s;
 }
 
 input:focus {
+    border-bottom: 5px solid @mediumPurple;
     outline: none;
 }
 
