Changed the homepage

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -165,7 +165,7 @@ a {
   background-color: rgba(255, 255, 255, 0.85);
   box-sizing: border-box;
   padding: 25px;
-  width: 35%;
+  width: 500px;
 }
 .start .start-screen h1 {
   margin-bottom: 10px;
