--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -31,7 +31,7 @@ a {
         background-color: rgba(255,255,255,.85);
         box-sizing: border-box;
         padding: 25px;
-        width: 35%;
+        width: 500px;
 
         h1 {
             margin-bottom: 10px;
