--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -88,6 +88,9 @@ a {
 .headlinr-nav {
     background-color: @darkPurple;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     padding: 10px;
     position: fixed;
     top: 0;
@@ -98,6 +101,21 @@ a {
     h1 {
         color: @white;
         font-size: 28px !important;
+    }
+
+    .spacer {
+        flex: 1;
+    }
+
+    .user-info {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+
+        img {
+            height: 24px;
+            margin-right: 10px;
+        }
     }
 }
 
