--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -70,17 +70,6 @@ a {
     }
 }
 
-.stats {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    .stats-welcome {
-        text-align: center;
-        width: 500px;
-    }
-}
-
 .game {
     padding: 20px;
 }
@@ -115,6 +104,12 @@ a {
         img {
             height: 24px;
             margin-right: 10px;
+        }
+
+        &:hover {
+            color: white;
+            cursor: pointer;
+            text-decoration: underline;
         }
     }
 }
@@ -194,46 +189,31 @@ a {
         flex: 1;
         flex-direction: column;
 
+        h1 {
+            margin-bottom: 15px;
+
+            p {
+                display: inline;
+            }
+        }
+
         h2 {
             margin-bottom: 15px;
         }
 
-        .connections-panel {
-            background-color: @white;
-            border-radius: 5px;
+        hr {
+            display: block;
+            height: 1px;
+            border: 0;
+            border-top: 1px solid @mediumGray;
+            margin: 1em 0;
+            padding: 0; 
+        }
+
+        .panel {
+            background-color: #efefef;
+            border-radius: 3px;
             padding: 15px;
-
-            .connection {
-                display: flex;
-                flex-direction: column;
-                margin-bottom: 10px;
-
-                .info {
-                    display: flex;
-                    flex-direction: row;
-                    width: 100%;
-                    align-items: center;
-                    margin-bottom: 10px;
-
-                    p {
-                        flex: 1;
-                        margin-left: 10px;
-                    }
-                }
-
-                .feelings-container {
-                    box-sizing: border-box;
-                    border: 1px solid @lightGray;
-                    width: 100%;
-                    height: 5px;
-
-                    .feelings {
-                        background-color: @green;
-                        height: 100%;
-                        transition: width .5s;
-                    }
-                }
-            }
         }
     }
 
