--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -66,7 +66,7 @@ a {
 ----------------------------------------------------------------------
 ----------------------------------------------------------------------
 --------------------------------------------------------------------*/
-.purpleBtn {
+.btn {
   background-color: #4F2D87;
   box-sizing: border-box;
   color: white;
@@ -74,21 +74,33 @@ a {
   padding: 10px;
   text-align: center;
 }
-.purpleBtn:hover {
+.btn:hover {
   cursor: pointer;
   background-color: #7040bf;
 }
-.greenBtn {
+.btn.backGreen {
   background-color: #7CC7A9;
-  box-sizing: border-box;
-  color: white;
-  display: inline-block;
-  padding: 10px;
-  text-align: center;
 }
-.greenBtn:hover {
-  cursor: pointer;
+.btn.backGreen:hover {
   background-color: #40bf8c;
+}
+.btn.backPurple {
+  background-color: #4F2D87;
+}
+.btn.backPurple:hover {
+  background-color: #7040bf;
+}
+.btn.backMedPurple {
+  background-color: #6A66A3;
+}
+.btn.backMedPurple:hover {
+  background-color: #433d8f;
+}
+.btn.backBlack {
+  background-color: #393D3F;
+}
+.btn.backBlack:hover {
+  background-color: #171a1c;
 }
 .fullWidth {
   width: 100%;
@@ -317,54 +329,42 @@ a {
   cursor: pointer;
   text-decoration: underline;
 }
-.headlinr-score-tracker {
-  background-color: white;
-  border-top: 1px solid #393D3F;
-  box-shadow: 0px -2px 4px #AAACA9;
-  display: flex;
-  flex-direction: row;
+.upgrades {
+  padding: 20px;
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  z-index: 100;
-}
-.headlinr-score-tracker > div {
-  position: relative;
-  flex: 1;
-  padding: 15px;
-  text-align: center;
-}
-.headlinr-score-tracker > div h6 {
-  position: relative;
-}
-.headlinr-score-tracker > div:nth-child(3) {
-  border-right: 1px solid #393D3F;
-  border-left: 1px solid #393D3F;
-}
-.headlinr-score-tracker > div .tracker {
-  position: absolute;
-  height: 5px;
   top: 0;
   left: 0;
   right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 101;
 }
-.headlinr-score-tracker > div .tracker .progress {
-  background-color: #7CC7A9;
+.upgrades .upgrades-container {
+  align-items: center;
+  background-color: #F0F1ED;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
   height: 100%;
-  max-width: 100%;
 }
-.headlinr-score-tracker .next-level-button {
-  position: absolute;
-  right: 0;
-  opacity: 1;
-  top: -90px;
-  transition: all .5s;
+.upgrades .upgrades-container .power-ups {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
 }
-.headlinr-score-tracker .next-level-button.inactive {
-  top: 50px;
-  opacity: 0;
+.upgrades .upgrades-container .power-ups .power-up-container {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  flex-direction: column;
+  padding: 20px;
+  text-align: center;
+}
+.upgrades .upgrades-container .power-ups .power-up-container img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 15px;
 }
 .headlinr {
   box-sizing: border-box;
