--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -114,59 +114,44 @@ a {
     }
 }
 
-.headlinr-score-tracker {
-    background-color: white;
-    border-top: 1px solid @darkGray;
-    box-shadow: 0px -2px 4px @lightGray;
-    display: flex;
-    flex-direction: row;
+.upgrades {
+    padding: 20px;
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    z-index: 100;
+    bottom: 0;
+    background-color: rgba(0,0,0,.2);
+    z-index: 101;
 
-    > div {
-        position: relative;
-        flex: 1;
-        padding: 15px;
-        text-align: center;
+    .upgrades-container {
+        align-items: center;
+        background-color: @white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
 
-        h6 {
-            position: relative;
-        }
+        .power-ups {
+            display: flex;
+            flex-direction: row;
+            width: 80%;
 
-        &:nth-child(3) {
-            border-right: 1px solid @darkGray;
-            border-left: 1px solid @darkGray;
-        }
+            .power-up-container {
+                display: flex;
+                align-items: center;
+                flex: 1;
+                flex-direction: column;
+                padding: 20px;
+                text-align: center;
 
-        .tracker {
-            position: absolute;
-            height: 5px;
-            top: 0;
-            left: 0;
-            right: 0;
-
-            .progress {
-                background-color: @green;
-                height: 100%;
-                max-width: 100%;
+                img {
+                    width: 100px;
+                    height: auto;
+                    margin-bottom: 15px;
+                }
             }
-        }
-    }
-
-    .next-level-button {
-        position: absolute;
-        right: 0;
-        opacity: 1;
-        top: -90px;
-        transition: all .5s;
-
-        &.inactive {
-            top: 50px;
-            opacity: 0;
         }
     }
 }
