--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -293,6 +293,7 @@ a {
   cursor: pointer;
 }
 .game {
+  box-sizing: border-box;
   padding: 20px;
 }
 .headlinr-nav {
@@ -366,16 +367,39 @@ a {
   height: auto;
   margin-bottom: 15px;
 }
+.dashboard {
+  box-sizing: border-box;
+  padding: 20px;
+}
+.dashboard .graphs-container {
+  display: flex;
+  flex-direction: row;
+}
+.dashboard .graphs-container .graphs-column {
+  flex: 1;
+}
+.dashboard .graphs-container .graphs-column .bar-container {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin: 10px 0;
+}
+.dashboard .graphs-container .graphs-column .bar-container .bar {
+  background-color: #7CC7A9;
+  color: white;
+  margin-right: 10px;
+  padding: 5px;
+}
 .headlinr {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  padding-top: 50px;
+  flex-direction: column;
 }
 .headlinr .column {
   display: flex;
-  margin-top: 50px;
   padding: 20px;
 }
 .headlinr .left {
