--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -71,6 +71,7 @@ a {
 }
 
 .game {
+    box-sizing: border-box;
     padding: 20px;
 }
 
@@ -156,16 +157,44 @@ a {
     }
 }
 
+.dashboard {
+    box-sizing: border-box;
+    padding: 20px;
+
+    .graphs-container {
+        display: flex;
+        flex-direction: row;
+
+        .graphs-column {
+            flex: 1;
+
+            .bar-container {
+                align-items: center;
+                display: flex;
+                flex-direction: row;
+                margin: 10px 0;
+
+                .bar {
+                    background-color: @green;
+                    color: white;
+                    margin-right: 10px;
+                    padding: 5px;
+                }
+            }
+        }
+    }
+}
+
 .headlinr {
     box-sizing: border-box;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    padding-top: 50px;
+    flex-direction: column;
 
     .column {
         display: flex;
-        margin-top: 50px;
         padding: 20px;
     }
 
